--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  
+  <header></header>
+  <nav></nav>
+  <main>
+    <section></section>
+    <article></article>
+    <aside></aside>
+  </main>
+  <footer>
+    <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
+    Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a> from 29 Dec 2020 to present.<br>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License. This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
+  </footer>
 </body>
 </html>
