--- a/index.html
+++ b/index.html
@@ -8,17 +8,49 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header></header>
-  <nav></nav>
-  <main>
-    <section></section>
-    <article></article>
+  <header><!-- header section -->
+    <img src="img/logo/logo.png" alt="Anti-Covid19 Social Club logo" sizes="" srcset="">
+    <h1>Anti-Covid19 Social Club</h1>
+  </header><!-- header section -->
+
+  <nav><!-- nav section -->
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">Symptoms</a></li>
+      <li><a href="">Transmission</a></li>
+      <li><a href="">Prevention</a></li>
+      <li><a href="">First Aid</a></li>
+      <li>
+        <a href="">Procedures</a>
+        <ul>
+          <li><a href="">Testing Procedure</a></li>
+          <li><a href="">Quarantine Procedure</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="">Join Us</a>
+        <ul>
+          <li><a href="">Members</a></li>
+          <li><a href="">Membership</a></li>
+          <li><a href="">Events</a></li>
+          <li><a href="">Donate</a></li>
+        </ul>
+      </li>
+      <li><a href="">Contact</a></li>
+      <li><a href="">About Us</a></li>
+    </ul>
+  </nav><!-- nav section -->
+
+  <main><!-- main section -->
+    <section><!-- section section --></section><!-- section section -->
+    <article><!-- article section --></article><!-- article section -->
     <aside></aside>
-  </main>
-  <footer>
+  </main><!-- footer section -->
+
+  <footer><!-- footer section -->
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
     Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a> from 29 Dec 2020 to present.<br>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License. This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
-  </footer>
+  </footer><!-- footer section -->
 </body>
 </html>
