--- a/index.html
+++ b/index.html
@@ -14,30 +14,35 @@
   </header><!-- header section -->
 
   <nav><!-- nav section -->
-    <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">Symptoms</a></li>
-      <li><a href="">Transmission</a></li>
-      <li><a href="">Prevention</a></li>
-      <li><a href="">First Aid</a></li>
-      <li>
-        <a href="">Procedures</a>
-        <ul>
-          <li><a href="">Testing Procedure</a></li>
-          <li><a href="">Quarantine Procedure</a></li>
+    <ul class="grandparent">
+      <li><a href="#">Home</a></li>
+      <li class="parent">
+        <a href="#">About COVID-19</a>
+        <ul class="child">
+          <li><a href="#">Symptoms</a></li>
+          <li><a href="#">Transmission</a></li>
+          <li><a href="#">Prevention</a></li>
+          <li><a href="#">First Aid</a></li>
+          <li>
+            <a href="#">Procedures</a>
+            <ul class="grandchild">
+              <li><a href="#">Testing Procedure</a></li>
+              <li><a href="#">Quarantine Procedure</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
-      <li>
-        <a href="">Join Us</a>
-        <ul>
-          <li><a href="">Members</a></li>
-          <li><a href="">Membership</a></li>
-          <li><a href="">Events</a></li>
-          <li><a href="">Donate</a></li>
+      <li class="parent">
+        <a href="#">Join Us</a>
+        <ul class="child">
+          <li><a href="#">Members</a></li>
+          <li><a href="#">Membership</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Donate</a></li>
         </ul>
       </li>
-      <li><a href="">Contact</a></li>
-      <li><a href="">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">About Us</a></li>
     </ul>
   </nav><!-- nav section -->
 
