--- a/index.html
+++ b/index.html
@@ -4,58 +4,112 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anti-Covid19 Social Club</title>
+
+  <!-- Favicon -->
   <link rel="shortcut icon" href="img/logo/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="assets/css/main.css">
+
+  <!-- CSS Files -->
+  <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-  <header><!-- header section -->
-    <img src="img/logo/logo.png" alt="Anti-Covid19 Social Club logo" sizes="" srcset="">
-    <h1>Anti-Covid19 Social Club</h1>
-  </header><!-- header section -->
+  <!-- header section -->
+  <header>
+    <!-- nav section -->
+    <nav class="container">
+      <input type="checkbox" name="" id="check">
 
-  <nav><!-- nav section -->
-    <ul class="grandparent">
-      <li><a href="#">Home</a></li>
-      <li class="parent">
-        <a href="#">About COVID-19</a>
-        <ul class="child">
-          <li><a href="#">Symptoms</a></li>
-          <li><a href="#">Transmission</a></li>
-          <li><a href="#">Prevention</a></li>
-          <li><a href="#">First Aid</a></li>
-          <li>
-            <a href="#">Procedures</a>
-            <ul class="grandchild">
-              <li><a href="#">Testing Procedure</a></li>
-              <li><a href="#">Quarantine Procedure</a></li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-      <li class="parent">
-        <a href="#">Join Us</a>
-        <ul class="child">
-          <li><a href="#">Members</a></li>
-          <li><a href="#">Membership</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Donate</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">About Us</a></li>
-    </ul>
-  </nav><!-- nav section -->
+      <div class="logo-container">
+        <img src="img/logo/logo-icon.png" alt="Anti-Covid19 Social Club logo" class="logo-img">
+        <h3 class="logo">Anti-Covid19 Social Club</h3>
+      </div>
 
-  <main><!-- main section -->
+      <div class="nav-btn">
+        <div class="nav-links">
+          <ul>
+            <li class="nav-link" style="--i: .6s">
+              <a href="#">Home</a>
+            </li>
+            <li class="nav-link" style="--i: .85s">
+              <a href="#">About COVID-19</a>
+              <div class="dropdown">
+                <ul>
+                  <li class="dropdown-link">
+                    <a href="#">Symptoms</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">Transmission</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">Prevention</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">First Aid</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">Procedures</a>
+                    <div class="dropdown second">
+                      <ul>
+                        <li class="dropdown-link">
+                          <a href="#">Testing Procedure</a>
+                        </li>
+                        <li class="dropdown-link">
+                          <a href="#">Quarantine Procedure</a>
+                        </li>
+                        <div class="arrow"></div>
+                      </ul>
+                    </div>
+                  </li>
+                  <div class="arrow"></div>
+                </ul>
+              </div>
+            </li>
+            <li class="nav-link" style="--i: 1.1s">
+              <a href="#">Our Services</i></a>
+              <div class="dropdown">
+                <ul>
+                  <li class="dropdown-link">
+                    <a href="#">Events</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">Donate</a>
+                  </li>
+                  <li class="dropdown-link">
+                    <a href="#">Membership</a>
+                  </li>
+                  <div class="arrow"></div>
+                </ul>
+              </div>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="#">About Us</a>
+            </li>
+            <li class="nav-link" style="--i: 1.35s">
+              <a href="#">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="hamburger-menu-container">
+        <div class="hamburger-menu">
+          <div></div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- main section -->
+  <main>
     <section><!-- section section --></section><!-- section section -->
     <article><!-- article section --></article><!-- article section -->
     <aside></aside>
-  </main><!-- footer section -->
+  </main>
 
-  <footer><!-- footer section -->
+  <!-- footer section -->
+  <footer>
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
     Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a> from 29 Dec 2020 to present.<br>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License. This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
-  </footer><!-- footer section -->
+  </footer>
 </body>
 </html>
