--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="img/logo/favicon.ico" type="image/x-icon">
 
   <!-- CSS Files -->
-  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- header section -->
