--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
 
   <!-- main section -->
   <main>
-    <section><!-- section section --></section><!-- section section -->
-    <article><!-- article section --></article><!-- article section -->
+    <!-- section section -->
+    <!-- <section></section> -->
+    <!-- article section -->
+    <article></article>
+    <!-- aside section -->
     <aside></aside>
   </main>
 
