--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- ! do not use html section here -->
+
   <!-- header section -->
   <header>
     <!-- nav section -->
@@ -97,17 +99,22 @@
       </div>
     </nav>
   </header>
-
+<br><br>
   <!-- main section -->
   <main>
-    <!-- section section -->
-    <!-- <section></section> -->
-    <!-- article section -->
-    <article></article>
-    <!-- aside section -->
-    <aside></aside>
+    <div class="content">
+      <h1 class="title">Lorem ipsum dolor</h1>
+      <h1 class="title"><a href="">Lorem ipsum dolor</a></h1>
+      <h1>Lorem ipsum dolor</h1>
+      <h2>Lorem ipsum dolor</h2>
+      <h3>Lorem ipsum dolor</h3>
+      <h4>Lorem ipsum dolor</h4>
+      <h5>Lorem ipsum dolor</h5>
+      <h6>Lorem ipsum dolor</h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem, praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!</p>
+    </div>
   </main>
-
+<br><br>
   <!-- footer section -->
   <footer>
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
