--- a/index.html
+++ b/index.html
@@ -99,19 +99,36 @@
       </div>
     </nav>
   </header>
+  <div class="header-slide">
+    <div class="header-slide-container">
+      <div class="notes">
+        <h1><mark>Anti-COVID19 Social Club</mark></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut eius provident ducimus perferendis, in neque consectetur facilis vero minus!
+        </p>
+      </div>
+      <div class="picture">
+        <img src="img/pic/5.jpg" alt="Sea shells">
+      </div>
+    </div>
+  </div>
 <br><br>
   <!-- main section -->
   <main>
     <div class="content">
-      <h1 class="title">Lorem ipsum dolor</h1>
-      <h1 class="title"><a href="">Lorem ipsum dolor</a></h1>
-      <h1>Lorem ipsum dolor</h1>
-      <h2>Lorem ipsum dolor</h2>
-      <h3>Lorem ipsum dolor</h3>
-      <h4>Lorem ipsum dolor</h4>
-      <h5>Lorem ipsum dolor</h5>
-      <h6>Lorem ipsum dolor</h6>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem, praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!</p>
+      <h1 class="title">Title</h1>
+      <h1 class="title"><a href="">Title Link</a></h1>
+      <h1>Header One</h1>
+      <h1 class="subtitle">Subtitle</h1>
+      <h1 class="subtitle"><a href="">Subtitle Link</a></h1>
+      <h2>Header Two</h2>
+      <h3>Header Three</h3>
+      <h4>Header Four</h4>
+      <h5>Header Five</h5>
+      <h6>Header Six</h6>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem, praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!
+      </p>
     </div>
   </main>
 <br><br>
