--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- ! do not use html section here -->
+  <!-- ! do not use html section tag here -->
 
   <!-- header section -->
   <header>
@@ -29,10 +29,10 @@
         <div class="nav-links">
           <ul>
             <li class="nav-link" style="--i: .6s">
-              <a href="#">Home</a>
+              <a href="">Home</a>
             </li>
             <li class="nav-link" style="--i: .85s">
-              <a href="#">About COVID-19</a>
+              <a href="covid19/">About COVID-19</a>
               <div class="dropdown">
                 <ul>
                   <li class="dropdown-link">
@@ -99,6 +99,8 @@
       </div>
     </nav>
   </header>
+
+  <!-- header-slide section -->
   <div class="header-slide">
     <div class="header-slide-container">
       <div class="notes">
@@ -135,7 +137,7 @@
   <!-- footer section -->
   <footer>
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
-    Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a> from 29 Dec 2020 to present.<br>
+    Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a><br>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License. This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
   </footer>
 </body>
