--- a/index.html
+++ b/index.html
@@ -12,128 +12,140 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- ! do not use html section tag here -->
+  <!-- ! do not use html section tag -->
+  <div id="page">
+    <div id="content">
 
-  <!-- header section -->
-  <header>
-    <!-- nav section -->
-    <nav class="container">
-      <input type="checkbox" name="" id="check">
+      <!-- header section -->
+      <header>
+        <!-- nav section -->
+        <nav class="container">
+          <input type="checkbox" name="" id="check">
 
-      <div class="logo-container">
-        <img src="img/logo/logo-icon.png" alt="Anti-Covid19 Social Club logo" class="logo-img">
-        <h3 class="logo">Anti-Covid19 Social Club</h3>
-      </div>
+          <div class="logo-container">
+            <img src="img/logo/logo-icon.png" alt="Anti-Covid19 Social Club logo" class="logo-img">
+            <h3 class="logo">Anti-Covid19 Social Club</h3>
+          </div>
 
-      <div class="nav-btn">
-        <div class="nav-links">
-          <ul>
-            <li class="nav-link" style="--i: .6s">
-              <a href="">Home</a>
-            </li>
-            <li class="nav-link" style="--i: .85s">
-              <a href="covid19/">About COVID-19</a>
-              <div class="dropdown">
-                <ul>
-                  <li class="dropdown-link">
-                    <a href="#">Symptoms</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">Transmission</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">Prevention</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">First Aid</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">Procedures</a>
-                    <div class="dropdown second">
-                      <ul>
-                        <li class="dropdown-link">
-                          <a href="#">Testing Procedure</a>
-                        </li>
-                        <li class="dropdown-link">
-                          <a href="#">Quarantine Procedure</a>
-                        </li>
-                        <div class="arrow"></div>
-                      </ul>
-                    </div>
-                  </li>
-                  <div class="arrow"></div>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-link" style="--i: 1.1s">
-              <a href="#">Our Services</i></a>
-              <div class="dropdown">
-                <ul>
-                  <li class="dropdown-link">
-                    <a href="#">Events</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">Donate</a>
-                  </li>
-                  <li class="dropdown-link">
-                    <a href="#">Membership</a>
-                  </li>
-                  <div class="arrow"></div>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-link" style="--i: 1.35s">
-              <a href="#">About Us</a>
-            </li>
-            <li class="nav-link" style="--i: 1.35s">
-              <a href="#">Contact Us</a>
-            </li>
-          </ul>
+          <div class="nav-btn">
+            <div class="nav-links">
+              <ul>
+                <li class="nav-link" style="--i: .6s">
+                  <a href="">Home</a>
+                </li>
+                <li class="nav-link" style="--i: .85s">
+                  <a href="covid19/">About COVID-19</a>
+                  <div class="dropdown">
+                    <ul>
+                      <li class="dropdown-link">
+                        <a href="#">Symptoms</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#">Transmission</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#">Prevention</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#">First Aid</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#">Procedures</a>
+                        <div class="dropdown second">
+                          <ul>
+                            <li class="dropdown-link">
+                              <a href="#">Testing Procedure</a>
+                            </li>
+                            <li class="dropdown-link">
+                              <a href="#">Quarantine Procedure</a>
+                            </li>
+                            <div class="arrow"></div>
+                          </ul>
+                        </div>
+                      </li>
+                      <div class="arrow"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-link" style="--i: 1.1s">
+                  <a href="#">Our Services</i></a>
+                  <div class="dropdown">
+                    <ul>
+                      <li class="dropdown-link">
+                        <a href="#">Events</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#">Donate</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#">Membership</a>
+                      </li>
+                      <div class="arrow"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-link" style="--i: 1.35s">
+                  <a href="#">About Us</a>
+                </li>
+                <li class="nav-link" style="--i: 1.35s">
+                  <a href="#">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+      
+          <div class="hamburger-menu-container">
+            <div class="hamburger-menu">
+              <div></div>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <!-- header-slide section -->
+      <div class="header-slide">
+        <div class="header-slide-container">
+          <div class="notes">
+            <h1><mark>Anti-COVID19 Social Club</mark></h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut eius provident ducimus perferendis, in
+              neque consectetur facilis vero minus!
+            </p>
+          </div>
+          <div class="picture">
+            <img src="img/pic/5.jpg" alt="Sea shells">
+          </div>
         </div>
       </div>
 
-      <div class="hamburger-menu-container">
-        <div class="hamburger-menu">
-          <div></div>
+      <!-- main section -->
+      <main>
+        <div class="content">
+          <h1 class="title">Title</h1>
+          <h1 class="title"><a href="">Title Link</a></h1>
+          <h1>Header One</h1>
+          <h1 class="subtitle">Subtitle</h1>
+          <h1 class="subtitle"><a href="">Subtitle Link</a></h1>
+          <h2>Header Two</h2>
+          <h3>Header Three</h3>
+          <h4>Header Four</h4>
+          <h5>Header Five</h5>
+          <h6>Header Six</h6>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus
+            aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias
+            natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem,
+            praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore
+            sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque
+            ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error
+            consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!
+          </p>
         </div>
-      </div>
-    </nav>
-  </header>
+      </main>
 
-  <!-- header-slide section -->
-  <div class="header-slide">
-    <div class="header-slide-container">
-      <div class="notes">
-        <h1><mark>Anti-COVID19 Social Club</mark></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut eius provident ducimus perferendis, in neque consectetur facilis vero minus!
-        </p>
-      </div>
-      <div class="picture">
-        <img src="img/pic/5.jpg" alt="Sea shells">
-      </div>
     </div>
   </div>
-<br><br>
-  <!-- main section -->
-  <main>
-    <div class="content">
-      <h1 class="title">Title</h1>
-      <h1 class="title"><a href="">Title Link</a></h1>
-      <h1>Header One</h1>
-      <h1 class="subtitle">Subtitle</h1>
-      <h1 class="subtitle"><a href="">Subtitle Link</a></h1>
-      <h2>Header Two</h2>
-      <h3>Header Three</h3>
-      <h4>Header Four</h4>
-      <h5>Header Five</h5>
-      <h6>Header Six</h6>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem, praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!
-      </p>
-    </div>
-  </main>
-<br><br>
+
   <!-- footer section -->
   <footer>
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
