--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <div class="dropdown">
                     <ul>
                       <li class="dropdown-link">
-                        <a href="#">Symptoms</a>
+                        <a href="covid19/symptoms.html">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Transmission</a>
@@ -108,19 +108,18 @@
           <div class="notes">
             <h1><mark>Anti-COVID19 Social Club</mark></h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut eius provident ducimus perferendis, in
-              neque consectetur facilis vero minus!
+              We're telling you that we are fighting the unseen virus together and that you're not alone. We are here to educate people and help them in prevention of COVID-19 virus. We are the Anti-Covid19 Social Club.
             </p>
           </div>
           <div class="picture">
-            <img src="img/pic/5.jpg" alt="Sea shells">
+            <img src="img/pic/people-wearing-protective-masks-are-showing-stop-sign-by-hands.jpg" alt="Anti-Covid19 Social Club">
           </div>
         </div>
       </div>
 
       <!-- main section -->
       <main>
-        <div class="content">
+        <div class="d-none">
           <h1 class="title">Title</h1>
           <h1 class="title"><a href="">Title Link</a></h1>
           <h1>Header One</h1>
@@ -141,6 +140,13 @@
             consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!
           </p>
         </div>
+
+        <div class="content">
+          <h3>What you will find here?</h3>
+          <p>
+            Welcome to our website. Here you'll find important details about the global pandemic COVID-19 virus from symptoms to quarantine procedures. You can also see our upcoming events list and how to join us in our mission through becoming a member or donatee. All about us are here including our contact details.
+          </p>
+        </div>
       </main>
 
     </div>
@@ -149,8 +155,8 @@
   <!-- footer section -->
   <footer>
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
-    Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a><br>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License. This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
+    Created with <img src="img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">M.K. Salada</a><br>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
   </footer>
 </body>
 </html>
