--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="covid19/symptoms.html">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Transmission</a>
+                        <a href="transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Prevention</a>
