--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <a href="transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Prevention</a>
+                        <a href="prevention.html">Prevention</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">First Aid</a>
+                        <a href="first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Procedures</a>
