--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                         <a href="first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Procedures</a>
+                        <a href="procedure.html">Procedures</a>
                         <div class="dropdown second">
                           <ul>
                             <li class="dropdown-link">
-                              <a href="#">Testing Procedure</a>
+                              <a href="testing-procedure.html">Testing Procedure</a>
                             </li>
                             <li class="dropdown-link">
-                              <a href="#">Quarantine Procedure</a>
+                              <a href="quarantine-procedure.html">Quarantine Procedure</a>
                             </li>
                             <div class="arrow"></div>
                           </ul>
