update services.html & style.scss

--- a/services.html
+++ b/services.html
@@ -72,13 +72,13 @@
                   <div class="dropdown">
                     <ul>
                       <li class="dropdown-link">
-                        <a href="#">Events</a>
+                        <a href="#event">Events</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Donate</a>
+                        <a href="#donate">Donate</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Membership</a>
+                        <a href="#membership">Membership</a>
                       </li>
                       <div class="arrow"></div>
                     </ul>
@@ -103,49 +103,48 @@
       </header>
 
       <!-- header-slide section -->
-      <div class="header-slide">
+      <div id="sample" class="header-slide d-none">
         <div class="header-slide-container">
           <div class="notes">
-            <h1><mark>Anti-COVID19 Social Club</mark></h1>
+            <h1><mark>Donate</mark></h1>
             <p>
               We're telling you that we are fighting the unseen virus together and that you're not alone. We are here to educate people and help them in prevention of COVID-19 virus. We are the Anti-Covid19 Social Club.
             </p>
           </div>
           <div class="picture">
-            <img src="img/pic/people-wearing-protective-masks-are-showing-stop-sign-by-hands.jpg" alt="Anti-Covid19 Social Club">
+            <img src="img/poster/Anti-Covid19 Social Club Donation Fundraising Poster.png" alt="Anti-Covid19 Social Club Donation Fundraising Poster">
           </div>
         </div>
       </div>
 
       <!-- main section -->
       <main>
-        <div class="d-none">
-          <h1 class="title">Title</h1>
-          <h1 class="title"><a href="">Title Link</a></h1>
-          <h1>Header One</h1>
-          <h1 class="subtitle">Subtitle</h1>
-          <h1 class="subtitle"><a href="">Subtitle Link</a></h1>
-          <h2>Header Two</h2>
-          <h3>Header Three</h3>
-          <h4>Header Four</h4>
-          <h5>Header Five</h5>
-          <h6>Header Six</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus
-            aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias
-            natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem,
-            praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore
-            sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque
-            ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error
-            consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!
-          </p>
-        </div>
-
         <div class="content">
-          <h3>What you will find here?</h3>
-          <p>
-            Welcome to our website. Here you'll find important details about the global pandemic COVID-19 virus from symptoms to quarantine procedures. You can also see our upcoming events list and how to join us in our mission through becoming a member or donatee. All about us are here including our contact details.
-          </p>
+          <div class="poster">
+            <div id="donate">
+              <h2>Donate</h2>
+              <br>
+              <a href="https://forms.gle/df1bDQgGxh8vHZwU9" target="_blank">
+                <img src="img/poster/Anti-Covid19 Social Club Donation Fundraising Poster.png" alt="Anti-Covid19 Social Club Donation Fundraising Poster">
+              </a>
+            </div>
+            <div id="membership">
+              <h2>Become a member</h2>
+              <br>
+              <a href="https://forms.gle/taK5Q9gVa8VJSLEZ7" target="_blank">
+                <img src="img/poster/Anti-Covid19 Social Club Membership Application Poster.png" alt="Anti-Covid19 Social Club Membership Application Poster">
+              </a>
+            </div>
+            <div id="event">
+              <h2>Upcoming event(s)</h2>
+              <br>
+              <h3>Smile Behind The Mask</h3>
+              <a href="https://forms.gle/Mnhmp6yNHyuvEQZ48" target="_blank">
+                <img src="img/poster/Smile Behind The Mask Event Poster.png" alt="Smile Behind The Mask Event Poster">
+              </a>
+              <p><a href="img/poster/Smile Behind The Mask Event Poster.png" target="_blank">See poster</a> | <a href="https://forms.gle/Mnhmp6yNHyuvEQZ48" target="_blank">Join event</a></p>
+            </div>
+          </div>
         </div>
       </main>
 
