--- a/services.html
+++ b/services.html
@@ -10,6 +10,7 @@
 
   <!-- CSS Files -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/grid.css">
 </head>
 <body>
   <!-- ! do not use html section tag -->
@@ -72,13 +73,13 @@
                   <div class="dropdown">
                     <ul>
                       <li class="dropdown-link">
-                        <a href="#event">Events</a>
-                      </li>
-                      <li class="dropdown-link">
                         <a href="#donate">Donate</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#membership">Membership</a>
+                      </li>
+                      <li class="dropdown-link">
+                        <a href="#event">Events</a>
                       </li>
                       <div class="arrow"></div>
                     </ul>
@@ -101,21 +102,6 @@
           </div>
         </nav>
       </header>
-
-      <!-- header-slide section -->
-      <div id="sample" class="header-slide d-none">
-        <div class="header-slide-container">
-          <div class="notes">
-            <h1><mark>Donate</mark></h1>
-            <p>
-              We're telling you that we are fighting the unseen virus together and that you're not alone. We are here to educate people and help them in prevention of COVID-19 virus. We are the Anti-Covid19 Social Club.
-            </p>
-          </div>
-          <div class="picture">
-            <img src="img/poster/Anti-Covid19 Social Club Donation Fundraising Poster.png" alt="Anti-Covid19 Social Club Donation Fundraising Poster">
-          </div>
-        </div>
-      </div>
 
       <!-- main section -->
       <main>
