modified navigation bar

--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
                         <a href="covid19/symptoms.html">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="transmission.html">Transmission</a>
+                        <a href="covid19/transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="prevention.html">Prevention</a>
+                        <a href="covid19/prevention.html">Prevention</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="first-aid.html">First Aid</a>
+                        <a href="covid19/first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="procedure.html">Procedures</a>
+                        <a href="covid19/procedure.html">Procedures</a>
                         <div class="dropdown second">
                           <ul>
                             <li class="dropdown-link">
-                              <a href="testing-procedure.html">Testing Procedure</a>
+                              <a href="covid19/testing-procedure.html">Testing Procedure</a>
                             </li>
                             <li class="dropdown-link">
-                              <a href="quarantine-procedure.html">Quarantine Procedure</a>
+                              <a href="covid19/quarantine-procedure.html">Quarantine Procedure</a>
                             </li>
                             <div class="arrow"></div>
                           </ul>
@@ -85,15 +85,15 @@
                   </div>
                 </li>
                 <li class="nav-link" style="--i: 1.35s">
-                  <a href="#">About Us</a>
+                  <a href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-link" style="--i: 1.35s">
-                  <a href="#">Contact Us</a>
+                  <a href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
           </div>
-      
+
           <div class="hamburger-menu-container">
             <div class="hamburger-menu">
               <div></div>
@@ -119,32 +119,10 @@
 
       <!-- main section -->
       <main>
-        <div class="d-none">
-          <h1 class="title">Title</h1>
-          <h1 class="title"><a href="">Title Link</a></h1>
-          <h1>Header One</h1>
-          <h1 class="subtitle">Subtitle</h1>
-          <h1 class="subtitle"><a href="">Subtitle Link</a></h1>
-          <h2>Header Two</h2>
-          <h3>Header Three</h3>
-          <h4>Header Four</h4>
-          <h5>Header Five</h5>
-          <h6>Header Six</h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste recusandae, nulla in, illum repellat doloribus
-            aspernatur illo, maiores ad minus autem placeat aut eius accusamus alias. Autem aliquam itaque pariatur molestias
-            natus recusandae molestiae suscipit, ea sapiente. Incidunt doloribus sequi aperiam sed sapiente dolorem,
-            praesentium quod, neque blanditiis enim necessitatibus at accusantium inventore numquam. Iure aperiam inventore
-            sapiente reiciendis. Asperiores rem excepturi totam expedita maiores ab, aliquid, aut culpa cupiditate vitae neque
-            ea reprehenderit earum cum, ut nihil tenetur esse. Quos sed similique dicta fugiat <a href="">adipisci</a> error
-            consequuntur placeat, deserunt reprehenderit ullam veniam unde nostrum voluptate, enim magni est vero!
-          </p>
-        </div>
-
         <div class="content">
-          <h3>What you will find here?</h3>
+          <h3>What you can find here?</h3>
           <p>
-            Welcome to our website. Here you'll find important details about the global pandemic COVID-19 virus from symptoms to quarantine procedures. You can also see our upcoming events list and how to join us in our mission through becoming a member or donatee. All about us are here including our contact details.
+            Welcome to our website. Here you'll find important details about the global pandemic COVID-19 virus from symptoms to quarantine procedures. You can also see our upcoming events list and how to join us in our mission through becoming a member or donor. All about us are here including our contact details.
           </p>
         </div>
       </main>
