--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
             <div class="nav-links">
               <ul>
                 <li class="nav-link" style="--i: .6s">
-                  <a href="">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="nav-link" style="--i: .85s">
                   <a href="covid19/">About COVID-19</a>
@@ -42,23 +42,23 @@
                         <a href="covid19/symptoms.html">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="transmission.html">Transmission</a>
+                        <a href="covid19/transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="prevention.html">Prevention</a>
+                        <a href="covid19/prevention.html">Prevention</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="first-aid.html">First Aid</a>
+                        <a href="covid19/first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="procedure.html">Procedures</a>
+                        <a href="covid19/procedure.html">Procedures</a>
                         <div class="dropdown second">
                           <ul>
                             <li class="dropdown-link">
-                              <a href="testing-procedure.html">Testing Procedure</a>
+                              <a href="covid19/testing-procedure.html">Testing Procedure</a>
                             </li>
                             <li class="dropdown-link">
-                              <a href="quarantine-procedure.html">Quarantine Procedure</a>
+                              <a href="covid19/quarantine-procedure.html">Quarantine Procedure</a>
                             </li>
                             <div class="arrow"></div>
                           </ul>
@@ -86,10 +86,10 @@
                   </div>
                 </li>
                 <li class="nav-link" style="--i: 1.35s">
-                  <a href="#">About Us</a>
+                  <a href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-link" style="--i: 1.35s">
-                  <a href="#">Contact Us</a>
+                  <a href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -106,6 +106,8 @@
       <!-- main section -->
       <main>
         <div class="content">
+          <h1><mark>Services</mark></h1>
+          <br>
           <div class="poster">
             <div id="donate">
               <h2>Donate</h2>
